--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^16.9.1",
     "@types/react-redux": "^7.1.4",
     "@types/redux": "^3.6.0",
+    "@types/styled-components": "^4.1.19",
     "@types/uuid": "^3.4.5",
     "electron": "^6.0.11",
     "ts-loader": "^6.2.0",
