--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
+    "reset-css": "^4.0.1",
     "styled-components": "^4.4.0",
     "uuid": "^3.3.3"
   },
