--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^4.1.19",
     "@types/uuid": "^3.4.5",
+    "css-loader": "^3.2.0",
     "electron": "^6.0.11",
+    "style-loader": "^1.0.0",
     "ts-loader": "^6.2.0",
     "tslint": "^5.20.0",
     "tslint-loader": "^3.5.4",
