--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "clone": "^2.1.2",
+    "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/clone": "^0.1.30",
+    "@types/moment": "^2.13.0",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
     "@types/react-redux": "^7.1.4",
