--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clone": "^2.1.2",
     "moment": "^2.24.0",
     "react": "^16.10.2",
+    "react-datepicker": "^1.7.0",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
@@ -25,6 +26,7 @@
     "@types/clone": "^0.1.30",
     "@types/moment": "^2.13.0",
     "@types/react": "^16.9.5",
+    "@types/react-datepicker": "^1.1.7",
     "@types/react-dom": "^16.9.1",
     "@types/react-redux": "^7.1.4",
     "@types/redux": "^3.6.0",
