--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "clone": "^2.1.2",
+    "fs-extra": "^8.1.0",
     "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-datepicker": "^1.7.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/clone": "^0.1.30",
+    "@types/fs-extra": "^8.0.0",
     "@types/moment": "^2.13.0",
     "@types/react": "^16.9.5",
     "@types/react-datepicker": "^1.1.7",
