settings for packaging

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "electron ./"
+    "start": "electron ./",
+    "package:mac": "webpack && electron-builder --mac --x64",
+    "package:windows": "webpack && electron-builder --win --x64",
+    "package:linux": "webpack && electron-builder --linux --x64"
   },
   "author": "",
   "license": "ISC",
@@ -36,6 +39,7 @@
     "@types/uuid": "^3.4.5",
     "css-loader": "^3.2.0",
     "electron": "^6.0.11",
+    "electron-builder": "^21.2.0",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.2.0",
     "tslint": "^5.20.0",
@@ -43,5 +47,43 @@
     "typescript": "^3.6.3",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
+  },
+  "build": {
+    "productName": "TODO",
+    "appId": "todo.exsample.com",
+    "directories": {
+      "output": "./product"
+    },
+    "files": [
+      "./dist/**/*.js",
+      "./index.html",
+      "./main.js",
+      "./icon/**/*"
+    ],
+    "dmg": {
+      "contents": [
+        {
+          "x": 410,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        },
+        {
+          "x": 130,
+          "y": 150,
+          "type": "file"
+        }
+      ]
+    },
+    "mac": {
+      "icon": "./icon/todo.icns",
+      "target": [
+        "dmg"
+      ]
+    },
+    "win": {
+      "icon": "./icon/todo.ico",
+      "target": "msi"
+    }
   }
 }
