--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "electron ./",
+    "start": "npm-run-all --parallel watch:start watch:build",
+    "watch:build": "webpack --watch",
+    "watch:start": "nodemon -e js,html,json,css --exec electron .",
     "package:mac": "webpack && electron-builder --mac --x64",
     "package:windows": "webpack && electron-builder --win --x64",
     "package:linux": "webpack && electron-builder --linux --x64"
@@ -40,6 +41,8 @@
     "css-loader": "^3.2.0",
     "electron": "^6.0.11",
     "electron-builder": "^21.2.0",
+    "nodemon": "^2.0.3",
+    "npm-run-all": "^4.1.5",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.2.0",
     "tslint": "^5.20.0",
