--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "react": "^16.10.2",
     "react-datepicker": "^1.7.0",
     "react-dom": "^16.10.2",
-    "react-redux": "^7.1.1",
-    "redux": "^4.0.4",
     "reset-css": "^4.0.1",
     "styled-components": "^4.4.0",
     "uuid": "^3.3.3"
@@ -34,13 +32,12 @@
     "@types/react": "^16.9.5",
     "@types/react-datepicker": "^1.1.7",
     "@types/react-dom": "^16.9.1",
-    "@types/react-redux": "^7.1.4",
-    "@types/redux": "^3.6.0",
     "@types/styled-components": "^4.1.19",
     "@types/uuid": "^3.4.5",
     "css-loader": "^3.2.0",
     "electron": "^6.0.11",
     "electron-builder": "^21.2.0",
+    "electron-devtools-installer": "^3.0.0",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "style-loader": "^1.0.0",
